Добавлены недостающие критерии в extract
